# cuda-straightforward-gemm

./: .gitmodules  CMakeLists.txt
include/: cugemm.hpp
src/: main.cu
test/: main_test.cu
